tests/reference/run-matmul_unallocated_01-39026d3.stderr
runtime error: Argument 3 of subroutine _lcompilers_matmul_real_______2 is unallocated.
  --> tests/errors/matmul_unallocated_01.f90:10:1
   |
10 | C = matmul(A, B)
   | ^ This is unallocated
